@@ -257,16 +257,6 @@ designed for visually impaired users. Set the theme by booting with
 </varlistentry>
 
 <varlistentry>
-<term>debian-installer/probe/usb</term>
-<listitem><para>
-
-Set to <userinput>false</userinput> to prevent probing for USB on
-boot, if that causes problems.
-
-</para></listitem>
-</varlistentry>
-
-<varlistentry>
 <term>netcfg/disable_dhcp</term>
 <listitem><para>
 
