@@ -368,8 +368,7 @@ The kernel normally tries to install USB modules and the USB keyboard driver
 in order to support some non-standard USB keyboards. However, there are some
 broken USB systems where the driver hangs on loading. A possible workaround
 may be disabling the USB controller in your mainboard BIOS setup. Another option
-is passing the <userinput>debian-installer/probe/usb=false</userinput> parameter
-at the boot prompt, which will prevent the modules from being loaded.
+is passing the <userinput>nousb</userinput> parameter at the boot prompt.
 
 </para>
    </sect3>
