@@ -10,8 +10,10 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Add cm-super to build dependencies as that improves the quality of the
     Russian PDF version.
+  * Suggest 'nousb' instead of debian-installer/probe/usb as USB modules are
+    now loaded automatically.
 
- -- Frans Pop <fjp@debian.org>  Thu, 19 Apr 2007 19:11:29 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 21 Apr 2007 02:45:23 +0200
 
 installation-guide (20070319) unstable; urgency=low
 
